typescript/checker/tests/conformance/statements/continueStatements/invalidDoWhileContinueStatements.ts.stderr
error: TS1115
 --> $DIR/tests/conformance/statements/continueStatements/invalidDoWhileContinueStatements.ts:7:1
  |
7 | continue;
  | ^^^^^^^^^

error: TS1107
  --> $DIR/tests/conformance/statements/continueStatements/invalidDoWhileContinueStatements.ts:11:4
   |
11 | do continue TWO; while (true)
   |    ^^^^^^^^^^^^^

error: TS1115
  --> $DIR/tests/conformance/statements/continueStatements/invalidDoWhileContinueStatements.ts:17:9
   |
17 |         continue TWO;
   |         ^^^^^^^^^^^^^

error: TS1115
  --> $DIR/tests/conformance/statements/continueStatements/invalidDoWhileContinueStatements.ts:24:9
   |
24 |         continue THREE;
   |         ^^^^^^^^^^^^^^^

error: TS1107
  --> $DIR/tests/conformance/statements/continueStatements/invalidDoWhileContinueStatements.ts:30:5
   |
30 |     continue FIVE;
   |     ^^^^^^^^^^^^^^

error: TS1107
  --> $DIR/tests/conformance/statements/continueStatements/invalidDoWhileContinueStatements.ts:40:5
   |
40 |     continue NINE;
   |     ^^^^^^^^^^^^^^

